# platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_INDEX.json  README.md  docker-bake.hcl  mise.toml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.claude/: ARCHITECTURE_MAP.md  COMMON_MISTAKES.md  QUICK_START.md  settings.json
.claude/sessions/: TEMPLATE.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  code-coverage.yml  release.yml
apps/chargate/: LICENSE  README.md  versions.env
apps/chargate/scripts/: bump-tool-versions.py  ci-install-tools.sh  ci-report.sh  ci-tool-smoke.sh  lint-actionlint.sh  lint-eslint.sh  lint-hadolint.sh  lint-kustomize.sh  lint-shellcheck.sh  security-checkov.sh  security-govulncheck.sh  security-npm-audit.sh  security-pip-audit.sh  security-semgrep.sh  security-trivy-license.sh  security-trivy-vuln.sh  security-trufflehog.sh
apps/chargate/scripts/lib/: common.sh
apps/diatreme/: .dev.vars.example  AGENTS.md  README.md  action.yml  mkdocs.yml  package.json  wrangler.jsonc
apps/diatreme/.github/workflows/: ci.yaml  deploy-worker.yaml  diatreme.yaml  release.yaml  tbd-ci.yaml  tbd-deploy-cloud-run.yaml  tbd-release.yaml
apps/diatreme/docs/: CNAME  branching-strategies.md  choose-your-setup.md  concepts.md  copilot-review.md  index.md  organization-setup.md  repository-setup.md  rollback.md
apps/diatreme/docs/reference/: action-inputs-outputs.md
apps/diatreme/examples/bbd/: ci-caller.yaml  release-caller.yaml
apps/diatreme/examples/config/: docker-bake.hcl
apps/diatreme/examples/dual-env/: deploy-caller.yaml  release-caller.yaml
apps/diatreme/examples/quad-env/: ci-caller.yaml  release-caller.yaml
apps/diatreme/examples/solo/: release-caller.yaml
apps/diatreme/examples/tri-env/: deploy-caller.yaml  release-caller.yaml
apps/diatreme/scripts/: check-branch-naming.sh  diatreme-sign.py  enable-auto-merge.sh  generate-action-reference.py  request-public-app-token.sh  require-copilot-review.sh  resolve-auth-token.sh
apps/diatreme/src/: index.ts
apps/diatreme/test/: index.test.ts
apps/diatreme/tests/bats/: action-shell-syntax.bats  check-branch-naming.bats  diatreme-sign.bats  enable-auto-merge.bats  require-copilot-review.bats  resolve-auth-token.bats
apps/diatreme/worker/: DISPATCH.md  package.json
apps/dunmir/: .gitignore  CHANGELOG.md  README.md
apps/dunmir/.github/workflows/: agent-ci.yml  agent-image.yml  release.yml  worker-ci.yml  worker-deploy.yml
apps/dunmir/agent/: .dockerignore
apps/dunmir/agent/examples/: config.example.yaml
apps/dunmir/agent/tests/: conftest.py  test_agentkeys.py  test_apply.py  test_commands.py  test_daemon.py  test_export.py  test_export_push.py  test_git_remote.py  test_inventory.py  test_managed_pipelines.py  test_normalise.py  test_probe_facts.py  test_remoteconfig.py  test_ssh.py
apps/dunmir/charts/mikrotik-minder-agent/: .helmignore  Chart.yaml  README.md  values.yaml
apps/dunmir/docs/: agent-protocol.md
apps/dunmir/worker/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/dunmir/worker/migrations/: 0001_init.sql  0002_commands.sql  0004_device_connection.sql  0005_device_label.sql  0007_tenancy.sql  (+4 more)
apps/mikrotik-minder/.github/: dependabot.yml
apps/mikrotik-minder/agent/: Dockerfile  README.md  pyproject.toml
apps/mikrotik-minder/agent/src/mikrotik_minder_agent/: __init__.py  apply.py  cli.py  export.py  inventory.py  minder.py  normalise.py  remoteconfig.py
apps/mikrotik-minder/agent/src/mikrotik_minder_agent/transports/: api.py
apps/mikrotik-minder/agent/tests/: test_backup.py  test_check_relaxes_server_token.py  test_config.py  test_config_remote.py  test_gitrepo.py  test_gitrepo_push.py  test_minder.py  test_ping.py  test_ssh.py  test_updates.py
apps/mikrotik-minder/docs/: rfc-control-plane-managed-config.md
apps/mikrotik-minder/worker/: package.json  wrangler.toml
docs/: architecture.md  index.md  setup.md
(+45 files in other folders)
