# uv workspace root for the public monorepo.
# Python *versions* are pinned in mise.toml; uv manages *dependencies*.
[project]
name = "platform-workspace"
version = "0.0.0"
description = "Golden-stack public monorepo — Python workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/dunmir/agent"]

# Shared Python lint/format config — Ruff only (no Black/Flake8/isort).
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
