[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mikrotik-minder-agent"
version = "0.1.0"
description = "Local agent for Mikrotik Minder: connects to RouterOS over API/SSH and reports heartbeats and job outcomes to the control plane."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Magmamoose" }]
keywords = ["mikrotik", "routeros", "monitoring", "maintenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "click>=8.1,<9",
  "httpx>=0.27,<0.29",
  "librouteros>=3.2,<4",
  "paramiko>=3.4,<4",
  "PyNaCl>=1.5,<2",  # libsodium sealed boxes for the Pro credential vault (also via paramiko)
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.7",
]

[project.scripts]
mikrotik-minder-agent = "mikrotik_minder_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mikrotik_minder_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # assert is fine in tests

[tool.ruff.lint.per-file-ignores]
# Tests: hardcoded passwords are fine in fixtures; subprocess `git` calls are deliberate.
"tests/**" = ["S105", "S106", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
